Check carte avant de la déposer